new-dep.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: devtube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devtube
  name: api-gateway-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
    spec:
      containers:
      - image: public.ecr.aws/s0p6q3j7/api-gateway:v0.0.3-b09763c
        imagePullPolicy: Always
        name: api-gateway
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: devtube
  name: api-gateway-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: api-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: devtube
  name: ingress-api-gateway
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:564439693649:certificate/3a6cdb8f-c952-42c3-84f5-235d9747fc55
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-gateway-service
              port:
                number: 80
